--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,14 +1,17 @@
 .logo-img {
-  max-height: 64px;
-  height: 64px;
-  width: 128px
+    max-height: 64px;
+    height: 64px;
+    width: 128px
 }
-.nav {
-  background-color: #E0E0E0;
+md-sidenav, .nav, .nav.md-locked-open, .nav.md-locked-open {
+    background-color: #E0E0E0;
+    width: 256px;
+    max-width: 256px;
+    min-width: 256px;
 }
 .content {
-  background-color: #F5F5F5;
+    background-color: #F5F5F5;
 }
 .header {
-  background-color: #FF6E40
+    background-color: #FF6E40
 }
