--- a/app/components/wizard/demo/step1.html
+++ b/app/components/wizard/demo/step1.html
@@ -1,2 +1,19 @@
-<h1 class="md-display-2">Tab One</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla venenatis ante augue. Phasellus volutpat neque ac dui mattis vulputate. Etiam consequat aliquam cursus. In sodales pretium ultrices. Maecenas lectus est, sollicitudin consectetur felis nec, feugiat ultricies mi.</p>
+<h1 class="md-display-2">Informações Básicas</h1>
+<md-content layout-align="center start" layout-padding layout>
+    <md-input-container flex="33">
+        <label>Submission Date</label>
+        <input type="text">
+    </md-input-container>
+</md-content>
+<md-content layout-align="center start" layout-padding layout>
+    <md-input-container flex="33">
+        <label>Submission Date</label>
+        <input type="text">
+    </md-input-container>
+</md-content>
+<md-content layout-align="center start" layout-padding layout>
+    <md-input-container flex="33">
+        <label>Submission Date</label>
+        <input type="text">
+    </md-input-container>
+</md-content>
