--- a/app/components/directives/menu/menuLink/menuLink.html
+++ b/app/components/directives/menu/menuLink/menuLink.html
@@ -1,7 +1,10 @@
 <md-button ng-class="{'active' : isSelected(section)}" ng-click="focusSection()" ng-href="{{(section.type === 'version' ? '' : '#') + section.url}}">
-    <md-icon>account_balance</md-icon>
-    <span class="menu-name">{{section.name}}</span>
-    <span class="md-visually-hidden" ng-if="isSelected(section)">
-        current page
-    </span>
+    <div flex layout-align="start center" layout="row">
+        <md-icon>account_balance</md-icon>
+        <span class="menu-name">{{section.name}}</span>
+        <span flex=""></span>
+        <span class="md-visually-hidden" ng-if="isSelected(section)">
+            current page
+        </span>
+    </div>
 </md-button>
