--- a/app/styles/menu.css
+++ b/app/styles/menu.css
@@ -1,5 +1,5 @@
 md-sidenav, .nav, .nav.md-locked-open, .nav.md-locked-open {
-    background-color: #E0E0E0;
+    background-color: #EEEEEE;
     width: 256px;
     max-width: 256px;
     min-width: 256px;
