--- a/app/styles/menu.css
+++ b/app/styles/menu.css
@@ -20,17 +20,38 @@ md-sidenav.md-sidenav-left {
     position: static;
     transform: translate3d(0, 0, 0);
 }
+md-sidenav.md-sidenav-left.md-closed:hover{
+    overflow: visible;
+}
 md-sidenav.md-sidenav-left header img, md-sidenav.md-sidenav-left .menu-name, md-sidenav.md-sidenav-left .md-toggle-icon {
     visibility: visible;
 }
 md-sidenav.md-sidenav-left.md-closed header img, md-sidenav.md-sidenav-left.md-closed .menu-name, md-sidenav.md-sidenav-left.md-closed .md-toggle-icon {
     visibility: hidden;
 }
-md-sidenav.md-sidenav-left header img{
+md-sidenav.md-sidenav-left .menu-toggle-list {
+    display: block;
+}
+md-sidenav.md-sidenav-left.md-closed .menu-toggle-list {
+    display: none;
+}
+md-sidenav.md-sidenav-left header img {
     width: 128px;
 }
-md-sidenav.md-sidenav-left.md-closed header img{
+md-sidenav.md-sidenav-left.md-closed header img {
     width: 0px;
+}
+md-sidenav.md-sidenav-left.md-closed li.parent-list-item:hover .md-button,
+md-sidenav.md-sidenav-left.md-closed li.parent-list-item:hover ul
+{
+    background-color: #EEEEEE;
+}
+md-sidenav.md-sidenav-left.md-closed li.parent-list-item:hover .menu-name{
+    visibility: visible;
+    position: absolute;
+    top: 0;
+    left: 60px;
+    width: 200px;
 }
 .docs-menu, .docs-menu ul {
     list-style: none;
@@ -58,6 +79,7 @@ md-sidenav.md-sidenav-left.md-closed header img{
     text-decoration: none;
     white-space: normal;
     width: 100%;
+    min-width: initial;
 }
 .docs-menu md-select {
     /* Override md-select margins.  With margins the menu will look incorrect and causes mobile list
