--- a/app/components/directives/menu/menu.html
+++ b/app/components/directives/menu/menu.html
@@ -3,7 +3,7 @@
         <md-button class="md-icon-button" ng-click="toggleSidenav('left')">
             <md-icon aria-label="Menu">menu</md-icon>
         </md-button>
-        <img alt="" src="img/logo.png" style="height: 64px;"/>
+        <img alt="" src="img/logo.png" style="height: inherit;"/>
     </header>
     <ul class="docs-menu">
         <li class="parent-list-item" ng-class="{'parentActive' : isSectionSelected(section)}" ng-repeat="section in menu">
