--- a/app/components/directives/menu/menuToggle/menuToggle.html
+++ b/app/components/directives/menu/menuToggle/menuToggle.html
@@ -1,4 +1,4 @@
-<md-button class="md-button-toggle" ng-mouseenter="mouseOver()" ng-mouseleave="mouseOver()" ng-click="toggle()">
+<md-button class="md-button-toggle" ng-click="toggle()">
     <div flex layout="row" layout-align="start center">
         <md-icon>account_balance</md-icon>
         <span class="menu-name">{{section.name}}</span>
@@ -10,6 +10,6 @@
 </md-button>
 <ul class="menu-toggle-list">
     <li ng-repeat="page in section.pages">
-        <menu-link section="page"></menu-link>
+        <menu-link page="page" section="section"></menu-link>
     </li>
 </ul>
