--- a/app/components/directives/wizard/wizard.html
+++ b/app/components/directives/wizard/wizard.html
@@ -1,31 +1,29 @@
-<div class="md-whiteframe-z1">
-    <md-content class="md-padding">
-        <md-progress-linear md-mode="determinate" ng-value="wizardCtrl.progressValue"></md-progress-linear>
-        <form name="wizardForm">
-            <md-tabs md-border-bottom md-dynamic-height md-no-bar="true" md-selected="wizardCtrl.selected" md-stretch-tabs="always">
-                <md-tab ng-disabled="wizardForm.$invalid && wizardCtrl.selected != $index" ng-repeat="step in wizard.steps">
-                    <md-tab-label>
-                        {{step.Title}}
-                    </md-tab-label>
-                    <md-tab-body>
-                        <md-content class="md-padding" ng-include="step.url"></md-content>
-                    </md-tab-body>
-                </md-tab>
-            </md-tabs>
-            <div layout-align="space-between center" layout="row">
-                <md-button class="md-fab danger-button">
-                    <md-icon>close</md-icon>
-                </md-button>
-                <md-button class="md-fab md-primary" ng-click="wizardCtrl.previousStep()" ng-disabled="wizardCtrl.isFirstStep()">
-                    <md-icon>navigate_before</md-icon>
-                </md-button>
-                <md-button class="md-fab md-primary" ng-click="wizardCtrl.nextStep()" ng-disabled="wizardForm.$invalid || wizardCtrl.isLastStep()">
-                    <md-icon>navigate_next</md-icon>
-                </md-button>
-                <md-button class="md-fab success-button" ng-disabled="wizardForm.$invalid || !wizardCtrl.isLastStep()">
-                    <md-icon>check</md-icon>
-                </md-button>
-            </div>
-        </form>
-    </md-content>
-</div>
+<md-content class="md-padding md-whiteframe-z1">
+    <md-progress-linear md-mode="determinate" ng-value="wizardCtrl.progressValue"></md-progress-linear>
+    <form name="wizardForm">
+        <md-tabs md-border-bottom md-dynamic-height md-no-bar="true" md-selected="wizardCtrl.selected" md-stretch-tabs="always">
+            <md-tab ng-disabled="wizardForm.$invalid && wizardCtrl.selected != $index" ng-repeat="step in wizard.steps">
+                <md-tab-label>
+                    {{step.Title}}
+                </md-tab-label>
+                <md-tab-body>
+                    <md-content class="md-padding" ng-include="step.url"></md-content>
+                </md-tab-body>
+            </md-tab>
+        </md-tabs>
+        <div layout-align="space-between center" layout="row">
+            <md-button class="md-fab danger-button">
+                <md-icon>close</md-icon>
+            </md-button>
+            <md-button class="md-fab md-primary" ng-click="wizardCtrl.previousStep()" ng-disabled="wizardCtrl.isFirstStep()">
+                <md-icon>navigate_before</md-icon>
+            </md-button>
+            <md-button class="md-fab md-primary" ng-click="wizardCtrl.nextStep()" ng-disabled="wizardForm.$invalid || wizardCtrl.isLastStep()">
+                <md-icon>navigate_next</md-icon>
+            </md-button>
+            <md-button class="md-fab success-button" ng-disabled="wizardForm.$invalid || !wizardCtrl.isLastStep()">
+                <md-icon>check</md-icon>
+            </md-button>
+        </div>
+    </form>
+</md-content>
